[gd_scene load_steps=25 format=3 uid="uid://lhvcffyg5kmn"]

[ext_resource type="Script" path="res://gameObjects/player/player.gd" id="1_cy31q"]
[ext_resource type="Texture2D" uid="uid://ce61w072tsfma" path="res://art/Enemies/enemies x1.png" id="2_pvvh7"]
[ext_resource type="Script" path="res://gameObjects/player/weaponHandler.gd" id="3_r821w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ga83p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ohh0q"]
atlas = ExtResource("2_pvvh7")
region = Rect2(0, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3le74"]
atlas = ExtResource("2_pvvh7")
region = Rect2(32, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpcsn"]
atlas = ExtResource("2_pvvh7")
region = Rect2(64, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7ixb"]
atlas = ExtResource("2_pvvh7")
region = Rect2(96, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir77n"]
atlas = ExtResource("2_pvvh7")
region = Rect2(128, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irrrk"]
atlas = ExtResource("2_pvvh7")
region = Rect2(160, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_renhe"]
atlas = ExtResource("2_pvvh7")
region = Rect2(192, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wemsn"]
atlas = ExtResource("2_pvvh7")
region = Rect2(224, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k55bg"]
atlas = ExtResource("2_pvvh7")
region = Rect2(288, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1xr1"]
atlas = ExtResource("2_pvvh7")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tww4c"]
atlas = ExtResource("2_pvvh7")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eekn7"]
atlas = ExtResource("2_pvvh7")
region = Rect2(0, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooq11"]
atlas = ExtResource("2_pvvh7")
region = Rect2(32, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo15g"]
atlas = ExtResource("2_pvvh7")
region = Rect2(64, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxy2h"]
atlas = ExtResource("2_pvvh7")
region = Rect2(96, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnc31"]
atlas = ExtResource("2_pvvh7")
region = Rect2(0, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_537ad"]
atlas = ExtResource("2_pvvh7")
region = Rect2(32, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gvpu"]
atlas = ExtResource("2_pvvh7")
region = Rect2(64, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbcnr"]
atlas = ExtResource("2_pvvh7")
region = Rect2(96, 416, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wafby"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohh0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3le74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpcsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7ixb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir77n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irrrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_renhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wemsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k55bg")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1xr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tww4c")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_eekn7")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ooq11")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_wo15g")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kxy2h")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnc31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_537ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gvpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbcnr")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_cy31q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_ga83p")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wafby")
animation = &"death"
autoplay = "idle"

[node name="weaponHandler" type="Node2D" parent="."]
script = ExtResource("3_r821w")

[node name="dashCooldown" type="Timer" parent="."]

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="timeout" from="dashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
